@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add install_policy method
     - add verify_policy method
     - add wait_for_task method
 
